<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Main Activity -->
    <string name="app_name">Find me</string>
    <string name="my_position">My Position</string>
    <string name="ask_settings">Find the other phone</string>
    <string name="reply_settings">Reply Setings</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="history">History</string>
    
    <!-- Settings -->
    <string name="fake_sms">Fake SMS</string>
    <string name="fake_sms_long">Emulate receive of an SMS. Useful for debugging and testing only.</string>
    <string name="process_outgoing_sms">Process outgoing SMS</string>
    <string name="process_outgoing_sms_long">Every SMS send by this program will be shown in a dialog first. There will be an option Send or Cancel.</string>
    
    <!-- Fake SMS -->
    <string name="common_findme_url">findme://ask?v=1&amp;a=50&amp;o=14</string>
    <string name="from">From:</string>
    <string name="message">Message:</string>
    <string name="fake_sms_help">Program will handle this fake incoming SMS exactly like a real incoming SMS. Please note that you may force Findme to send a real SMS by this.</string>
    <string name="handle">Handle</string>
    
    <!-- My Position -->
    <string name="open_last">Open last</string>
    <string name="longitude">longitude</string>
    <string name="latitude">latitude</string>
    <string name="altitude">altitude</string>
    <string name="accuracy">accuracy</string>
    <string name="gps_disabled">GPS is disabled</string>
    <string name="no_map_application">No map application</string>

    <!-- Reply -->
    <string-array name="reply_mode">
        <item>Reply all requests</item>
        <item>Ignore all requests</item>
        <item>Reply \"I won\'t tell you\"</item>
    </string-array>
    
    <string name="reply_mode_reply_all">If a query arrives by an SMS, program will answer it. It will turn on GPS, get your position and send it to an asking device by an SMS. Evrybody will know where are you.</string>
    <string name="reply_mode_do_not_reply">If a query arrives an SMS, program will ignore it.</string>
    <string name="reply_mode_reply_secret">If a query arrives by an SMS, program will reply, that it will not send your position. Everyone may know that you have that application working but nobody will get you position.</string>
    
    <string name="ask_sms">Ask before sending a SMS reply</string>
    <string name="ask_internet">Ask before using Internet connection for a reply</string>
    <string name="ask_autoreply">Autoreply yes after 1 minute timeout</string>
    
    <!-- Ask -->
    
    <string name="where_is_phone">Where is the phone with number</string>
    <string name="common_phone_number">+420774123456</string>
    <string name="push_query">Push query</string>
    <string name="sms_query">SMS query</string>
    <string name="attach_my_position">Attach my position</string>
    <string name="gps_timeout">GPS timeout</string>
    <string name="findme_must_be_installed">The other person must also have this application in his phone and replying must be enabled, otherwise it will not work and he will get a confusing SMS with a findme:// URL. Do not send Findme requests to people that do not use this app.</string>
    
    <!-- Show Position -->
    <string name="show_position">Show Position</string>
    <string name="open_on_map">Open on Map</string>
    <string name="time">Time</string>
    <string name="number">Number</string>
    <string name="time_format">EEE, MMM d, yyyy hh:mm:ss aaa</string>
    
    <string name="incoming_position">Incoming location</string>
    <string name="incoming_position_ask">Incoming location - part of query</string>
    <string name="incoming_position_reply">Incoming location - reply</string>
    <string name="reply_without_location">I have got a reply without location</string>
    
    <!-- Show Error -->
    <string name="sender_no_gps">Sender does not know his location</string>
    <string name="sender_will_not_tell_you">Sender does not want to tell you his location</string>
    <string name="sender_timeout">GPS timeout on sender side</string>
    <string name="error">Error</string>
    <string name="no_reason_in_message">No reason in a message</string>
    
    <!-- Ask SMS -->
    <string name="really_send_sms">Really send SMS?</string>
    <string name="send">Send</string>
    <string name="do_not_send">Don\'t sent</string>
    
    <!-- About -->
    <string name="changelog">Changelog</string>
    <string name="changelog_long">\n
Version 2.0\n\n
* History</string>
    <string name="todo_list">TODO list</string>
    <string name="todo_list_long">\n
* Contacts integration\n
* Better request handling - service, notification\n
* Other then GPS location sources\n
* Pushes and the Internet\n
* Project www pages\n
* Public positions\n
* Internal map\n
* Friends\n
* Encryption and signature\n
* Slave mode\n
* More than just location</string>
    <string name="manual">This program can be used for loacalisation of a phone A by its GPS module, special SMS from a phone B and generated SMS reply from the phone A. You must install the app to both phones and enable GPS in A. You will be able any time later to send a SMS from  B do A. The app in A will detect it, turn on GPS, sends a SMS to B. The app in B will detect it and show GPS coordinates of A with an option to show it in an external map application.</string>
	<string name="warning">Warning</string>
	<string name="warning_long">This app is designed to tell somebody your location by a SMS reply. Please note that sending a SMS normally costs some money (the price depends on your mobile provider). Please note that the person sending SMS query may be not your friend, it may be some hacker which has broken security of your mobile provider network, it may be an extra payed number and it also may be somebody who shlould not know your location. Please also note that every app code (including this one) may contain errors. If you do not accept this, please uninstall this app.</string>
	
	<!-- History -->
	<string name="incoming">incoming</string>
	<string name="outgoing">outgoing</string>
	<string name="no_records">No records</string>
	<string name="query">query</string>
	<string name="reply">reply</string>
	<string name="unknown_type">Unknown type</string>
	<string name="phone_number">phone number</string>
	<string name="full_text">full text</string>
	<string name="direction">direction</string>
	<string name="send_again">Send again</string>
	<string name="show_again">Show again</string>
	<string name="handle_again">Handle again</string>
	<string name="type">type</string>
</resources>
