<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/form_background">

	<LinearLayout
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:gravity="center"
    	android:background="@color/form_background"
    	android:padding="@dimen/common_margin">

   		<TextView
   		    android:id="@+id/about_program"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/form_text"
			android:textSize="@dimen/big_text"
   		    />
   		
   		<TextView
   		    android:text="@string/manual"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/form_text"
   		    />
   		
   		<TextView
   		    android:text="@string/warning"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/form_text"
			android:textSize="@dimen/big_text"
   		    />
   		
   		<TextView
   		    android:text="@string/warning_long"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/form_text"
   		    />

   		<TextView
   		    android:layout_marginTop="@dimen/common_margin"
   		    android:text="@string/changelog"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/form_text"
			android:textSize="@dimen/big_text"
   		    />
   		
   		<TextView
   		    android:text="@string/changelog_long"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/form_text"
   		    />
   		
   				
   		<TextView
   		    android:layout_marginTop="@dimen/common_margin"
   		    android:text="@string/todo_list"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/form_text"
			android:textSize="@dimen/big_text"
   		    />
   		
   		<TextView
   		    android:text="@string/todo_list_long"
   		    android:layout_width="fill_parent"
   		    android:layout_height="wrap_content"
   		    android:textColor="@color/form_text"
   		    />
        
	</LinearLayout>
</ScrollView>