<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/form_background"
	android:layout_width="fill_parent"
   	android:layout_height="fill_parent">
	<LinearLayout
		android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:layout_margin="@dimen/common_margin">
    	<TextView
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:textColor="@color/form_text"
    		android:text="@string/where_is_phone"
    		android:layout_marginBottom="@dimen/common_margin"
    	    />
    	<EditText
    	    android:id="@+id/ask_number"
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/common_phone_number"
    		android:layout_marginBottom="@dimen/common_margin"
    	    />
    	<LinearLayout
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginBottom="@dimen/common_margin"
    	    >
    		<CheckBox
    		    android:id="@+id/ask_attach"
    	    	android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    	    	/>
    		<TextView
    	    	android:layout_width="fill_parent"
    			android:layout_height="wrap_content"
    			android:textColor="@color/form_text"
    			android:text="@string/attach_my_position"
    	    />
    	</LinearLayout>	
    	<LinearLayout
    	    android:orientation="horizontal"
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    	    >
    	    <Button
    	        android:id="@+id/ask_sms"
    	        android:layout_weight="1"
    	        android:text="@string/sms_query"
    	        android:layout_width="0px"
    			android:layout_height="wrap_content"
    	        />
    	    <Button
    	        android:visibility="gone"
    	        android:id="@+id/ask_push"
    	        android:layout_weight="1"
    	        android:enabled="false"
    	        android:text="@string/push_query"
    	        android:layout_width="0px"
    			android:layout_height="wrap_content" />
    	</LinearLayout>
    	<TextView
    	    android:layout_marginTop="@dimen/common_margin"
    	   	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:textColor="@color/form_text"
    		android:text="@string/findme_must_be_installed" />
	</LinearLayout>
</ScrollView>
