<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/form_background"
    android:padding="@dimen/common_margin">
   
    <LinearLayout
        android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
		>
        <CheckBox
            android:id="@+id/process_outgoing_sms"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
            />
        
        <TextView
   	    	android:text="@string/process_outgoing_sms"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textColor="@color/form_text" />
        
    </LinearLayout>
    
    <TextView
   	    	android:text="@string/process_outgoing_sms_long"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:textColor="@color/form_text" />
    
   	<Button
   	    android:layout_marginTop="@dimen/common_margin"
        android:id="@+id/fake_sms"
   	    android:layout_width="fill_parent"
       	android:layout_height="wrap_content"
       	android:text="@string/fake_sms" />
   	
   	<TextView
   	    android:text="@string/fake_sms_long"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/form_text" />
   	 
</LinearLayout>
