<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/form_background"
	android:layout_width="fill_parent"
   	android:layout_height="fill_parent">
	<LinearLayout
		android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:layout_margin="@dimen/common_margin">

    	<EditText
    	    android:id="@+id/from_number"
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/common_phone_number"
    		android:layout_marginBottom="@dimen/common_margin" />
    	<EditText
    	    android:id="@+id/message"
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/common_findme_url"
    		android:layout_marginBottom="@dimen/common_margin" />
    	
   	    <Button
   	        android:id="@+id/reeive_sms"
   	        android:text="@string/fake_sms"
   	        android:layout_width="fill_parent"
   			android:layout_height="wrap_content" />
	</LinearLayout>
</ScrollView>
