<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/form_background"
    android:padding="@dimen/common_margin">
    
    <Button
        android:id="@+id/main_open_last"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_last" />
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/longitude"
        		android:textColor="@color/form_text"
                />
            <TextView
                android:id="@+id/main_longitude"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/form_text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/latitude"
        		android:textColor="@color/form_text"
                />
            <TextView
                android:id="@+id/main_latitude"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/form_text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/altitude"
        		android:textColor="@color/form_text"
                />
            <TextView
                android:id="@+id/main_altitude"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/form_text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/accuracy"
        		android:textColor="@color/form_text"
                />
            <TextView
                android:id="@+id/main_accuracy"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/form_text"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>
