<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#FFF"
    android:padding="10dp">

    <TextView
        android:id="@+id/caption"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <Button
        android:id="@+id/open"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_on_map" />
    
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/time"
        		android:textColor="@color/form_text"
                />
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/form_text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/number"
        		android:textColor="@color/form_text"
                />
            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/form_text"
                />
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/longitude"
        		android:textColor="@color/form_text"
                />
            <TextView
                android:id="@+id/longitude"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/form_text"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:text="@string/latitude"
        		android:textColor="@color/form_text"
                />
            <TextView
                android:id="@+id/latitude"
                android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:textColor="@color/form_text"
                />
        </TableRow>
    </TableLayout>

</LinearLayout>
