<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/form_background"
	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:padding="@dimen/common_margin">
	<LinearLayout
		android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical">
    	<Spinner
    	    android:id="@+id/reply_mode"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginBottom="@dimen/common_margin"
    	    />
    	<TextView
    	    android:textColor="@color/form_text"
    	    android:id="@+id/reply_mode_info"
    	    android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    	    />
    	<LinearLayout
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    	    >
    		<CheckBox 
    		    android:id="@+id/ask_sms"
    	    	android:layout_width="wrap_content"
    			android:layout_height="wrap_content" />
    		<TextView
    	    	android:textColor="@color/form_text"
    	    	android:text="@string/ask_sms"
    	    	android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    	    />
   		</LinearLayout>
    	<LinearLayout
    	    android:visibility="gone"
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    	    >
    		<CheckBox 
    		    android:id="@+id/ask_internet"
    	    	android:layout_width="wrap_content"
    			android:layout_height="wrap_content" />
    		<TextView
    	    	android:textColor="@color/form_text"
    	    	android:text="@string/ask_internet"
    	    	android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    	    />
   		</LinearLayout>
    	<LinearLayout
    	    android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:orientation="horizontal"
    	    >
    		<CheckBox 
    		    android:id="@+id/ask_autoreply"
    	    	android:layout_width="wrap_content"
    			android:layout_height="wrap_content" />
    		<TextView
    	    	android:textColor="@color/form_text"
    	    	android:text="@string/ask_autoreply"
    	    	android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    	    />
   		</LinearLayout>
	</LinearLayout>
</ScrollView>